@@ -1,4 +1,4 @@
-package com.example.CasYnoRoyale;
+package com.example.CasYnoRoyale.roulette;
 
 
 import java.time.LocalDateTime;
@@ -8,7 +8,7 @@ import java.util.ArrayList;
 import com.example.CasYnoRoyale.database.User;
 
 public class Roulette {
-    ArrayList<User> players  = new ArrayList<User>();
+    ArrayList<Bet> bets  = new ArrayList<Bet>();
     ArrayList<Integer> tirages = new ArrayList<>();
 
      
@@ -19,17 +19,29 @@ public class Roulette {
     }
 
     public int getLastTirage(){
-        return tirages.getLast();
+        return tirages.get(tirages.size()-1);
 
     }
 
-    
+    public void betDeposit(Bet b){
+        bets.add(b);
+        
+    }
+
     public int tirer(){
         if(ZonedDateTime.now().isAfter(prochainTirage)){
             int tirage = (int) (Math.random() * 37);
             tirages.add(tirage);
             resetTime();
+
+            for (Bet bet : bets) {
+                bet.fire(tirage);
+                
+            }
+            bets.clear();
+
             return tirage;
+
         }
         return -1;
         
